[tool.poetry]
name = "docserver"
version = "0.1.0"
description = ""
authors = ["Brian Marroquin <brianmarroq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.23"
GitPython = "^3.1.12"
Sphinx = "^3.4.3"
celery = {extras = ["redis"], version = "^5.0.5"}
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
